--- a/public/app/dashboardview/dashboardview.html
+++ b/public/app/dashboardview/dashboardview.html
@@ -1,5 +1,7 @@
 
-<div class = "loader" ng-if="DashboardviewComponent.orders =='' "><img class = "loader-img" ng-src = "/assets/images/loader2.gif"/></div>
+adsf
+{{DashboardviewComponent.loaded}}
+<div class = "loader" ng-show="DashboardviewComponent.orders =='' "><img class = "loader-img" ng-src = "/assets/images/loader2.gif"/></div>
 <div ng-if="DashboardviewComponent.orders !='' " class = "main-content-view dashboard-content">
 	
 	<div class = "dashboard-card revenue">
